continue restructure of the project