@@ -8,15 +8,19 @@
     <version>2020.04.0D-SNAPSHOT</version>
     <modules>
         <module>model</module>
-        <module>algorithms/importer/json</module>
-        <module>server/ws</module>
-        <module>loadapproximator</module>
         <module>scenarios</module>
         <module>uncertainty</module>
-        <module>algorithms/validator/umatrix</module>
-        <module>utils</module>
+        <module>algorithms/validator/gridconfiguration</module>
+        <module>algorithms/importer/json</module>
         <module>algorithms/powerflow</module>
-        <module>algorithms/cycle/detector</module>
+        <module>algorithms/cycle/all</module>
+        <module>server/ws</module>
+        <module>utils</module>
+        <module>algorithms/cycle/current</module>
+        <module>algorithms/matrixbuilder/matrixbuilder.certain</module>
+        <module>algorithms/loadapproximator/loadapproximator.certain</module>
+        <module>algorithms/matrixbuilder/matrixbuilder.uncertain</module>
+        <module>algorithms/loadapproximator/loadapproximator.uncertain.naive</module>
     </modules>
 
     <name>DucPropagationJava</name>
@@ -64,7 +68,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.2</version>
+                <version>3.0.0-M3</version>
+                <configuration>
+                    <argLine>--enable-preview</argLine>
+                </configuration>
             </plugin>
 
             <plugin>
